<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#061c32"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.developinggeek.kuudakhazan_wastemanagment.Activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/logo2"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:text="@string/poweredBy"
                    android:textColor="#ffb"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Create Account"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tag_line2"
                android:textAlignment="center"
                android:textColor="#1469cc"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="270dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:background="@drawable/border_rectangular_white"
                android:gravity="start|center_vertical"
                android:hint="Name"
                android:inputType="textCapWords|textPersonName"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEmailId"
                android:layout_width="270dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rectangular_white"
                android:gravity="start|center_vertical"
                android:hint="@string/sample_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="270dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rectangular_white"
                android:gravity="start|center_vertical"
                android:hint="Mobile no."
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="270dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rectangular_white"
                android:gravity="start|center_vertical"
                android:hint="Username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="270dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rectangular_white"
                android:ems="10"
                android:gravity="start|center_vertical"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btCreateAccount"
                    android:layout_width="180dp"
                    android:layout_height="42dp"
                    android:background="@drawable/ripple_effect_blue"
                    android:gravity="center"
                    android:text="CREATE ACCOUNT"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:visibility="visible" />
            </FrameLayout>

            <TextView
                android:id="@+id/text3"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:text="Already have an account?"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:textAlignment="center"
                android:textColor="#fa5301"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
